Fix alignment & justification of FAQs

--- a/css/original.css
+++ b/css/original.css
@@ -200,6 +200,12 @@ section {
   margin: 30px 0;
 }
 
+.faq .row {
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+}
+
 .faq .question h2 {
   font-family: 'Montserrat';
   font-weight: 700;
@@ -215,6 +221,7 @@ section {
 .faq .question p {
   font-size: 18px;
   line-height: 1.5em;
+  text-align: justify;
 }
 
 .faq img {
